--- a/home/templates/home/layout.html
+++ b/home/templates/home/layout.html
@@ -1,3 +1,6 @@
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +9,7 @@
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'main.css' %}" >
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -13,10 +17,37 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body id="backgroundImage">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand">Entabulature</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Photo Gallery
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/constructionPics">Constructions</a></li>
+                        <li><a href="/elevationPics">Elevations</a></li>
+                        <li><a href="/interiorPics">Interiors</a></li>
+                    </ul>
+                </li>
+                <li><a href="/team">Team</a></li>
+                <li><a href="/blog">Blogs</a></li>
+                <li><a href="/testimonials">Testimonials</a></li>
+                <li><a href="/contactUs">Contact Us</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/admin"><span class="glyphicon glyphicon-log-in"></span> Admin</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
-        <h1 align="center">This is Entabulature Website</h1>
         {% block content %}
         {% endblock %}
     </div>
