--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,3 @@
 #backgroundImage  { background-image: url('background.jpg')}
 .item  {width: 100%; height: 550px; padding-left: 6%;  object-fit: contain;}
-#projectPic {width: 100%}
+projectPic > img {width: 50% }
