--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -2,21 +2,21 @@
 
 {% block content %}
 {% for each in projects %}
-    <div class="thumbnail">
+    <div class="thumbnail projectPic">
         <h3 align="center">{{each.title}}</h3>
         {% if each.thumb %}
-        <img id="projectPic" src="{{ each.thumb.url }}">
+        <img   src="{{ each.thumb.url }}">
         {% endif %}
         {% if each.thumb1 %}
-        <img id="projectPic" src="{{ each.thumb1.url }}">
+        <img  src="{{ each.thumb1.url }}">
         {% endif %}
         {% if each.thumb2 %}
-        <img id="projectPic" src="{{ each.thumb2.url }}">
+        <img  src="{{ each.thumb2.url }}">
         {% endif %}
         {% if each.thumb3 %}
-        <img id="projectPic" src="{{ each.thumb3.url }}">
+        <img src="{{ each.thumb3.url }}">
         {% endif %}
-        <p><h4>Description:</h4> {{ each.description }}</p>
+        <div><h4>Description:</h4> <p>{{ each.description }}</p></div>
     </div>
 {% endfor %}
 
