contactUs form done.. all backend done

--- a/home/templates/home/testimonial.html
+++ b/home/templates/home/testimonial.html
@@ -3,20 +3,29 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h2>Testimonials</h2>
-    {% for each in testimonials %}
-        <p>Name: {{ each.name }}</p>
-        <p>Testimonial: {{ each.testimonial }}</p>
-    {% endfor %}
-    <form method="post" class="post-form form-group">
-    {% csrf_token %}
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Testimonials</h2>
+            {% for each in testimonials %}
+                <p>Name: {{ each.name }}</p>
+                <p>Testimonial: {{ each.testimonial }}</p>
+            <hr>
+            {% endfor %}
+        </div>
+        <div class="col-md-6">
+            <form method="post" class="post-form form-group">
+            {% csrf_token %}
 
-    {{form}}<br>
+            {{form}}<br>
 
 
-    <button type="submit" class=" btn btn-danger">Save</button>
+            <button type="submit" class=" btn btn-danger">Save</button>
 
-    </form>
+            </form>
+        </div>
+
+
+    </div>
 
 </div>
 
