--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -1,23 +1,57 @@
 {% extends 'home/layout.html' %}
 
 {% block content %}
-{% for each in projects %}
-    <div class="thumbnail projectPic">
-        <h3 align="center">{{each.title}}</h3>
-        {% if each.thumb %}
-        <img   src="{{ each.thumb.url }}">
-        {% endif %}
-        {% if each.thumb1 %}
-        <img  src="{{ each.thumb1.url }}">
-        {% endif %}
-        {% if each.thumb2 %}
-        <img  src="{{ each.thumb2.url }}">
-        {% endif %}
-        {% if each.thumb3 %}
-        <img src="{{ each.thumb3.url }}">
-        {% endif %}
-        <div><h4>Description:</h4> <p>{{ each.description }}</p></div>
+{% for each in projects %} 
+<div class="jumbotron">
+    <h3 align="center">{{each.title}}</h3>
+    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>                    
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                    {% if each.thumb %}
+                    <div class="carousel-item active">
+                        <img src="{{ each.thumb.url }}" alt="Los Angeles">
+                    </div>
+                    {% endif %}
+                    {% if each.thumb1 %}
+                    <div class="carousel-item">
+                        <img src="{{ each.thumb1.url }}" alt="Chicago">
+                    </div>
+                    {% endif %}
+                    {% if each.thumb2 %}
+                    <div class="carousel-item">
+                        <img src="{{ each.thumb2.url }}" alt="New York">
+                    </div>   
+                    {% endif %}
+                    {% if each.thumb3 %}
+                    <div class="carousel-item">
+                        <img src="{{ each.thumb3.url }}" alt="New York">
+                    </div>   
+                    {% endif %}                    
+            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
+    <div><h4>Description:</h4> <p>{{ each.description }}</p></div>
+</div>
+
+
+   
 {% endfor %}
 
 {% endblock %}
