--- a/home/templates/home/testimonial.html
+++ b/home/templates/home/testimonial.html
@@ -3,16 +3,9 @@
 {% block content %}
 
 <div class="jumbotron">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Testimonials</h2>
-            {% for each in testimonials %}
-                <p>Name: {{ each.name }}</p>
-                <p>Testimonial: {{ each.testimonial }}</p>
-            <hr>
-            {% endfor %}
-        </div>
-        <div class="col-md-6">
+    <div class="row">        
+        <div class="col-md-12">
+            <h3>Enter your testimonial</h3>
             <form method="post" class="post-form form-group">
             {% csrf_token %}
 
@@ -23,11 +16,23 @@
 
             </form>
         </div>
-
-
     </div>
 
 </div>
+
+{% for each in testimonials %}
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-md-12">
+            <p>Name: {{ each.name }}</p>
+            <p>Testimonial: {{ each.testimonial }}</p>            
+        </div>
+    </div>
+</div>
+{% endfor %}
+
+
+
 
 
 
